ENA Project Converter

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 openpyxl
 requests
 docker
+lxml
+json-converter
 git+https://github.com/ebi-ait/python_biosamples-v4_lib.git@covid-excel-utils#egg=biosamples-v4
