--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ requests
 docker
 pyjwt==1.7.1
 lxml
-git+https://github.com/ebi-ait/json-converter.git@feature/sub-mapping
+# TODO when latest version (0.4.0) of json-converter published to PyPi then change it back to: json-converter
+git+https://github.com/ebi-ait/json-converter.git
 git+https://github.com/ebi-ait/python_biosamples-v4_lib.git@covid-excel-utils#egg=biosamples-v4 #  Issue: Does not respect locked versions from biosamples repo requirements.txt
 biostudies-client
